layout fixes etc

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: redcarpet
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Code stuff
+title : Outer Dot
 tagline: Site Tagline
 author :
   name : Eran Medan
