--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 ##production_url : http://username.github.io
-production_url : http://eranmedan.com
+production_url : http://outerdot.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
