change to scalatutorials.com

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: redcarpet
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Outer Dot
+title : Scala Tutorials
 tagline: Site Tagline
 author :
   name : Eran Medan
@@ -28,7 +28,7 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 ##production_url : http://username.github.io
-production_url : http://outerdot.com
+production_url : http://scalatutorials.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
